[package]
name         = "elena-tools"
version      = "0.1.0"
description  = "Tool trait, registry, and orchestration for Elena's agentic loop."
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
elena-types = { workspace = true }
elena-llm   = { workspace = true }

tokio        = { workspace = true }
tokio-util   = { workspace = true }
tokio-stream = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
futures      = { workspace = true }

async-trait = { workspace = true }
dashmap     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
